Добавил способы оплаты

--- a/excursionapp/templates/js_constants.html
+++ b/excursionapp/templates/js_constants.html
@@ -19,6 +19,7 @@
     const checkCardUrl = "{% url 'check_card' %}";
     const processPaymentUrl = "{% url 'process_payment' %}";
     const deleteCardUrl = "{% url 'delete_card' 0 %}"; // 0 будет заменен на ID карты в JavaScript
+    const updateProfileUrl = "{% url 'update_user_profile' %}";
     
     // Обратная связь
     const sendFeedbackUrl = "{% url 'send_feedback' %}";
